--- a/css/index.css
+++ b/css/index.css
@@ -93,11 +93,17 @@ hr {
     background-color: #577980;
     color: white;
 }
+.dark a#fw {
+    color: white;
+}
 .light {
     background-color: #8fc1ca;
     color: black;
     border: 15px solid #577980;
     border-radius: 50px;
+}
+.light a#fw {
+    color: purple;
 }
 section h1 {
     color: #ffffff;
