--- a/css/index.css
+++ b/css/index.css
@@ -181,6 +181,12 @@ section#Active_Projects .colL {
     padding-right: 2%;
     padding-bottom: 3%;
 }
+section#Active_Projects .colL div {
+    padding-left: -12px;
+    padding-right: -12px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
 section#Active_Projects .colR {
     display: grid;
     align-content: center;
