made header image pixelated rather than large
because apparently that's a thing

--- a/wizardsvrobots/TemplateData/style.css
+++ b/wizardsvrobots/TemplateData/style.css
@@ -51,6 +51,9 @@ button {
 header:before {
     /* background-color: #95F1F6; */
     background-image: url(/media/headerBkg.png);
+    image-rendering: -moz-crisp-edges;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
     background-size: 1024px, 170px;
     background-position: 0px, 50px;
     z-index: -1;
@@ -61,9 +64,9 @@ header:before {
     left: 0;
     height: 169.133px;
     background-repeat:repeat-x;
-    -webkit-animation: flow-right 45s linear infinite;
-    -moz-animation: flow-right 45s linear infinite;
-    animation: flow-right 45s linear infinite;
+    -webkit-animation: flow-right 40s linear infinite;
+    -moz-animation: flow-right 40s linear infinite;
+    animation: flow-right 40s linear infinite;
 }
 @keyframes flow-right {
     0% {
