--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,9 @@ header {
 header:before {
     /* background-color: #95F1F6; */
     background-image: url(/media/headerBkg.png);
+    image-rendering: -moz-crisp-edges;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
     background-size: 1024px, 170px;
     background-position: 0px, 50px;
     z-index: -1;
@@ -46,9 +49,9 @@ header:before {
     left: 0;
     height: 170px;
     background-repeat:repeat-x;
-    -webkit-animation: flow-right 45s linear infinite;
-    -moz-animation: flow-right 45s linear infinite;
-    animation: flow-right 45s linear infinite;
+    -webkit-animation: flow-right 40s linear infinite;
+    -moz-animation: flow-right 40s linear infinite;
+    animation: flow-right 40s linear infinite;
 }
 @keyframes flow-right {
     0% {
