--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ body {
     margin: 0px;
     text-align: center;
     font-family: proximaNova-Regular;
-    background-color: #577980;
+    background-color: #2e2e2e;
 }
 h1 {
     font-family: retrograde;
@@ -34,11 +34,12 @@ header {
 }
 header:before {
     /* background-color: #95F1F6; */
-    background-image: url(/media/headerBkg.png);
+    background-image:  url(/media/headerBkg.png), url(/media/headerBkgBkg.png);
     image-rendering: -moz-crisp-edges;
     image-rendering: pixelated;
     -ms-interpolation-mode: nearest-neighbor;
-    background-size: 1024px, 168px;
+    background-size: 1024px 168px,
+        1024px 168px;
     background-position: 0px, 50px;
     z-index: -1;
     content: "";
@@ -48,16 +49,16 @@ header:before {
     left: 0;
     height: 170px;
     background-repeat:repeat-x;
-    -webkit-animation: flow-right 40s linear infinite;
-    -moz-animation: flow-right 40s linear infinite;
-    animation: flow-right 40s linear infinite;
+    -webkit-animation: flow-right 160s linear infinite;
+    -moz-animation: flow-right 160s linear infinite;
+    animation: flow-right 160s linear infinite;
 }
 @keyframes flow-right {
     0% {
         background-position: 0;
     }
     100% {
-        background-position: 1024px;
+        background-position: 4096px, -1024px;
     }
 }
 @-webkit-keyframes flow-right {
@@ -65,7 +66,7 @@ header:before {
         background-position: 0;
     }
     100% {
-        background-position: 0px;
+        background-position: 4096px, -1024px;
     }
 }
 header h1 {
@@ -75,8 +76,9 @@ header h1 {
     margin-bottom: 0px;
 }
 header h2 {
-    color: black;
-    font-size: small;
+    color: white;
+    text-shadow: 1.5px 1.5px 1px black;
+    font-size: medium;
     text-align: center;
     padding: 0px;
     margin-top: 0px;
@@ -88,7 +90,7 @@ header h2 {
     position: relative;
 }
 nav {
-    background-color: #5a838fbb;
+    background-color: #2e2e2ebb;
     color: #ffffff;
     text-shadow: 1px 1px 3px #2c2c2c;
     letter-spacing: 1px;
@@ -126,16 +128,16 @@ hr {
     color: white;
 }
 .dark {
-    background-color: #577980;
+    background-color: #2e2e2e;
     color: white;
 }
 .dark a#fw {
     color: white;
 }
 .light {
-    background-color: #8fc1ca;
+    background-color: #5e5e5e;
     color: black;
-    border: 15px solid #577980;
+    border: 15px solid #2e2e2e;
     border-radius: 50px;
 }
 .light a#fw {
@@ -148,6 +150,7 @@ section h1 {
     margin-left: 25%;
     margin-right: 25%;
     padding-top: 30px;
+    padding-bottom: 10px;
 }
 section hr.seperator {
     margin-left: 18%;
@@ -158,10 +161,12 @@ section hr.seperator {
 section.dark h2 {
     text-shadow: 1px 1px 3px #2c2c2c;
     font-size: xx-large;
+    line-height: 200%;
 }
 section.light h2 {
     text-shadow: 0.5px 0.5px 1px #2c2c2c;
     font-size: xx-large;
+    line-height: 200%;
 }
 section div.item {
     width: 100%;
@@ -173,6 +178,8 @@ section p {
     margin-left: 6%;
     margin-right: 6%;
     padding-bottom: 35px;
+    font-size: large;
+    line-height: 150%;
 }
 section .colL p{
     margin: 0;
