--- a/css/index.css
+++ b/css/index.css
@@ -7,7 +7,7 @@ body {
     margin: 0px;
     text-align: center;
     font-family: proximaNova-Regular;
-    background-color: #2e2e2e;
+    background-color: #282828;
 }
 h1 {
     font-family: retrograde;
@@ -90,7 +90,7 @@ header h2 {
     position: relative;
 }
 nav {
-    background-color: #2e2e2ebb;
+    background-color: #282828bb;
     color: #ffffff;
     text-shadow: 1px 1px 3px #2c2c2c;
     letter-spacing: 1px;
@@ -128,16 +128,16 @@ hr {
     color: white;
 }
 .dark {
-    background-color: #2e2e2e;
-    color: white;
+    background-color: #282828;
+    color: #eeeeee;
 }
 .dark a#fw {
     color: white;
 }
 .light {
-    background-color: #5e5e5e;
-    color: black;
-    border: 15px solid #2e2e2e;
+    background-color: #4e4e4e;
+    color: #eeeeee;
+    border: 15px solid #282828;
     border-radius: 50px;
 }
 .light a#fw {
@@ -187,6 +187,10 @@ section .colL p{
 }
 section .img img {
     box-shadow: 0.5px 0.5px 3px #2c2c2c;
+    transition: transform 0.2s; 
+}
+section .img img:hover { 
+    transform: scale(1.05);
 }
 section#Portfolio{
     align-content: center;
